[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://UFO.tscn" type="PackedScene" id=3]
[ext_resource path="res://song.ogg" type="AudioStream" id=4]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 562.956, 422.337 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513.421, 309.823 )
texture = ExtResource( 2 )

[node name="UFO" parent="." instance=ExtResource( 3 )]

[node name="GameOverArea" type="Area2D" parent="."]
position = Vector2( 510.037, 304.06 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
shape = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 9.301
autoplay = true

[node name="ClicksLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.65098, 0.384314, 1 )
text = "Clicks: 0"

[node name="LoseLabel" type="Label" parent="."]
margin_left = 347.627
margin_top = 256.744
margin_right = 673.627
margin_bottom = 354.744
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.588235, 0.0862745, 0.180392, 1 )
text = "You Lose"

[connection signal="input_event" from="GameOverArea" to="." method="_on_GameOverArea_input_event"]
